# ai-casino

./: Cargo.toml
casino-core/: Cargo.toml
casino-core/src/: lib.rs
engine/: Cargo.toml
engine/src/: lib.rs
game-roulette/: Cargo.toml
game-roulette/src/: lib.rs
robot-sdk/: Cargo.toml
robot-sdk/examples/: one_always_bot.rs  random_bot.rs  red_always_bot.rs
robot-sdk/src/: lib.rs  wasm_bot.rs  wasm_extism.rs
robot-wasm-loader/: Cargo.toml
robot-wasm-loader/src/: lib.rs  wasm_loader.rs
ui-cli/: Cargo.toml
ui-cli/src/: main.rs
wasm-robot/: Cargo.toml
wasm-robot-blackonly/: Cargo.toml
wasm-robot-blackonly/src/: black_always_wasm.rs  lib.rs
wasm-robot/src/: lib.rs  red_always_wasm.rs
